--- a/_posts/2018-12-01-ghci.md
+++ b/_posts/2018-12-01-ghci.md
@@ -18,7 +18,7 @@ Day one included Keynote Speeches by Lori Beer and Vaishali Kasture.
 Lori Beer is the CIO of JP Morgan. She told us to create our own brand. We often underplay our success and attribute it to “luck”. We should be Bold, Confident and Brave. According to her, authenticity, humility and ambition are very important in a person. She suggested listening to tech podcasts, reading up on the current technological news to stay up-to-date. Finally, she said, “Believe in Yourself.”
 Vaishali Kasture, who is the co-founder of SonderConnect gave valuable advice too. She emphasised on the art of negotiation, perfecting one’s elevator pitch and how networking is very very important. She also talked about Fitness and how being fit is very important. She says finding our interest and pursuing it is the most important thing. 😃
 
-![GHCI](images/ghc.jpeg)
+![GHCI](https://asquare14.github.io/assets/images/ghc.jpeg)
 #### Day 2(15th November)—Technical talks and Speed Mentoring
 I was very excited for Day 2 because it meant I could attend exciting talks about cutting edge technology. I sat in the AI, Machine Learning Track and High-Performance Computing Track till lunchtime. Some of the papers that were presented are “Gender Stereotyping in Bollywood Movies”, “Understanding how a Kalman Filter Works”, “ How the Brain Interprets Content — Latest Advancement in Natural Language Understanding” etc.
 After this, I went for the speed mentoring session. On the way to this session, I met Arya and my fellow scholars from the WIT learning program. It was amazing to finally meet them.
