--- a/_posts/2018-12-01-ghci.md
+++ b/_posts/2018-12-01-ghci.md
@@ -3,7 +3,7 @@ title: Attending Grace Hopper India Conference
 layout: post
 date: 2018-12-01 13:30
 tag:
-- conference
+- My experience at various conferences
 category: blog
 author: atibhi
 ---
