--- a/_posts/2019-07-18-oss-japan.md
+++ b/_posts/2019-07-18-oss-japan.md
@@ -3,7 +3,7 @@ title: My experience at OSS Japan 2019
 layout: post
 date: 2019-07-18 13:30
 tag:
-- conference
+- My experience at various conferences
 category: blog
 author: atibhi
 ---
