--- a/_posts/2019-07-18-oss-japan.md
+++ b/_posts/2019-07-18-oss-japan.md
@@ -1,5 +1,5 @@
 ---
-title: My experience at OSS Japan 2019
+title: My experience at Open Source Summit Japan 2019
 layout: post
 date: 2019-07-18 13:30
 tag:
