--- a/_posts/2018-12-01-ghci.md
+++ b/_posts/2018-12-01-ghci.md
@@ -1,5 +1,5 @@
 ---
-title: Attending Grace Hopper India Conference
+title: Attending Grace Hopper India Conference 2018
 layout: post
 date: 2018-12-01 13:30
 tag:
